<resources>
    <string name="app_name" translatable="false">Climate Mobility</string>
    <string name="action_settings">Settings</string>
    <string name="msg_join">Join our Community</string>
    <string name="be_the_solution">Be the solution to lowering emissions!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_login">Please log into your account to continue.</string>
    <string name="msg_email">Email</string>
    <string name="msg_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="msg_sign_up_reduce">Bee the solution to lowering emissions to combat climate change.</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="msg_do_you_want">Do you want to use biometric for Login?</string>
    <string name="msg_continue">Continue</string>
    <string name="next_step">Next Step</string>
    <string name="personal_details">Personal Details</string>
    <string name="dob">Date of Birth</string>
    <string name="street_addr">Street Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="msg_certify">I certify that I am 13 years of age or older.</string>
    <string name="i_accept_terms">I accept the</string>
    <string name="submit">Submit</string>
    <string name="bars">bars</string>
    <string name="phone_numer">Phone Number</string>
    <string name="msg_enter_email">Please enter your email to reset your password.</string>
    <string name="enter_email_or_phone">Enter Email</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="check_your_email">Check your email</string>
    <string name="msg_we_have_sent">We have sent password recovery instructions to your email.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Resend</string>
    <string name="msg_digit_code_sent">4-Digit code sent to </string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="msg_create_new_pwd">Your new password must be different from the current one.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create">Create</string>
    <string name="msg_congratulations">You have successfully changed your password.</string>
    <string name="congratulations">Congratulations</string>
    <string name="msg_change_pwd">Please confirm your existing password to create a new one</string>
    <string name="change_password">Change Password</string>
    <string name="msg_login_finger">Login using biometric credential</string>
    <string name="beeline_login">Beeline Login</string>
    <string name="use_account_password">Use Account Password</string>
    <string name="msg_face_id">Login using face id</string>
    <string name="phone_number">Phone Number</string>
    <string name="err_first_name">Please enter a valid First Name.</string>
    <string name="err_last_name">Please enter a valid Last Name.</string>
    <string name="err_email">Please enter a valid Email.</string>
    <string name="err_password_required" translatable="false">
        <![CDATA[
Password must contain:\n
  8 to 20 characters long.\n
  at least 1 uppercase letter.\n
  at least 1 lowercase letter.\n
  at least 1 special character. (Eg. @ # $)\n
  should not start with a number.\n
  should not contain any spaces.
]]>
    </string>
    <string name="err_phone_required">Please enter a valid Phone number.</string>
    <string name="err_confirm_pwd_not_match">Confirm Password doesn\'t match with Password.</string>
    <string name="err_street_address">Street Address should not be empty.</string>
    <string name="err_gender">Gender should not be empty.</string>
    <string name="err_city">City should not be empty.</string>
    <string name="err_state">State should not be empty.</string>
    <string name="err_zipcode">Zip Code should not be empty.</string>
    <string name="err_otp">OTP should not be empty.</string>
    <string name="msg_we_have_sent_on_mobile">We have sent a password recovery instructions to your phone.</string>
    <string name="check_your_phone">Check your phone</string>
    <string name="version">Version %s</string>
    <string name="copyright_2023_beeline_all_rights_reserved">Copyright © 2023 Beeline. All Rights Reserved.</string>
    <string name="martha_parker">Martha Parker</string>
    <string name="view_profile">View Profile</string>
    <string name="more">More</string>
    <string name="sex">Gender</string>
    <string name="group_joined">Joined Group</string>
    <string name="personal_vehicle_type">Personal Vehicle Type</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="save">Save</string>
    <string name="other_information">Other Information</string>
    <string name="state">State</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="msg_are_you_sure">Are you sure you want delete this account? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="current_password">Current Password</string>
    <string name="notifications">Notifications</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="service_delay">Service delays</string>
    <string-array name="tab_arr">
        <item>Home</item>
        <item>Trips</item>
        <item>Rewards</item>
        <item>Feedback</item>
        <item>More</item>
    </string-array>
    <string-array name="arr_settings">
        <item>Languages</item>
        <item>Notifications</item>
        <item>FAQs</item>
        <item>Contact Us</item>
        <item>License Agreement</item>
        <item>Privacy Statement</item>
        <item>Logout</item>
    </string-array>
    <string name="service_delays">Service delays</string>
    <string name="detours">Detours</string>
    <string name="desc_service_delays">Receive all notifications</string>
    <string name="desc_detours">Get your personalized daily briefing\nin your inbox</string>
    <string name="contact_us">Contact Us</string>
    <string name="customer_report_form">Customer Service</string>
    <string name="msg_customer_report_form">If you have any questions or comments regarding the Climate Mobility App, click the link below.</string>
    <string name="go_to_form">Form Embedded</string>
    <string name="choose_lang">Choose Your Preferred Language</string>
    <string name="msg_choose_lang">Please select your language.</string>
    <string name="yes">Yes</string>
    <string name="msg_want_logout">Do you really want to exit the Climate Mobility application?</string>
    <string name="msg_logout">Are you sure you want delete this account? This action cannot be undone.</string>
    <string name="logout">Logout</string>
    <string name="err_email_not_empty">Email should not be empty.</string>
    <string name="err_pwd_not_empty">Password should not be empty.</string>
    <string name="err_pwd_length">Password required must have least 8 characters.</string>
    <string name="err_first_name_empty">First Name should not be empty.</string>
    <string name="err_last_name_empty">Last Name should not be empty.</string>
    <string name="err_confirm_pwd_empty">Confirm Password should not be empty.</string>
    <string name="err_term_conditions">Please accept the Terms and Conditions of the application.</string>
    <string name="err_age_requirement">Please accept the Age requirement of the application.</string>
    <string name="err_pwd_valid">Please enter a valid password.</string>
    <string name="err_dob">Date of birth should not be empty.</string>
    <string name="err_otp_length">Please enter a valid 4 digit OTP.</string>
    <string name="err_new_pwd_empty">New Password should not be empty.</string>
    <string name="err_new_pwd_length">New Password required must be of 8 characters.</string>
    <string name="err_new_password_required"><![CDATA[
New Password must contain:\n
  8 to 20 characters long.\n
  at least 1 uppercase letter.\n
  at least 1 lowercase letter.\n
  at least 1 special character. (Eg. @ # $)\n
  should not start with a number.\n
  should not contain any spaces.
]]>
    </string>
    <string name="california">California</string>
    <string name="signin">Sign In</string>
    <string name="term_conditions">Terms and Conditions.</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="err_biometric">No biometric features available on this device.</string>
    <string name="err_biometric_unavailable">Biometric features are currently unavailable.</string>
    <string name="err_biometric_security_valunerablity">Biometric features available but a security vulnerability has been discovered.</string>
    <string name="err_biometric_incompatiblity">Biometric features are currently unavailable because the specified options are incompatible with the current Android version.</string>
    <string name="err_biometric_auth">Unable to determine whether the user can authenticate using biometrics.</string>
    <string name="msg_biometric_no_enrollment">You do not have biometrics set up for your device. Would you like to change your settings?</string>
    <string name="err_biometric_operation">Operation is cancelled by user interaction.</string>
    <string name="settings">Settings</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="msg_login_biometric">Log in using your biometric credential</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="err_biometric_operation_cancelled">Operation is cancelled by user interaction.</string>
    <string name="biometric_too_many_attempt">Too many attempts. Try again later. Please try after 30 seconds.</string>
    <string name="err_confirm_pwd_match">Confirm Password doesn\'t match with New Password</string>
    <string name="edit">Edit</string>
    <string name="female">Female</string>
    <string name="err_dob13years">Date of Birth must be above 13 year to use app.</string>
    <string name="err_pwd_empty">Phone number should not be empty.</string>
    <string name="biometric_is_activated">Biometric is activated</string>
    <string name="biometrics">Biometrics</string>
    <string name="next">Next</string>
    <string name="msg_signup_success">An email has been sent to you to activate your account.</string>
    <string name="msg_biometric_disabled_app">Biometrics setting is disabled for Beeline App. You can login to app and enable biometrics from Edit Profile.</string>
    <string name="msg_be_the_solution">Bee the solution to lowering\n emissions to combat\n climate change.</string>
    <string name="trip_planning">Trip Planning</string>
    <string name="msg_successfully_completed">You have successfully completed your trip and you get %s emission reduced and %s hive points.</string>
    <string name="msg_feedback_message">Would you like to provide feedback about your trip experience?</string>
</resources>